--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,8 +200,8 @@ jobs:
       - run:
           name: Configure server
           command: |
-            # Your code here
-            exit 1
+            cd .circleci/ansible
+            ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
 
 #   run-migrations:
