--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -18,8 +18,9 @@
 
     - name: "install python for Ansible."
       # Your code here
-      ansible.builtin.pip:
-        name: bottle
+      become: yes
+      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      changed_when: false
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
