Add backend cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -211,6 +211,10 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
+      # Restore from cache
+      - restore_cache:
+          # Your job code here
+          keys: [backend-build]
       - run:
           name: Run migrations
           command: |
