--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -21,6 +21,7 @@
       easy_install:
         name: pip
         state: latest
+        become: yes
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
