--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -19,9 +19,8 @@
     - name: "install python for Ansible."
       # Your code here
       become: yes
-      easy_install:
-        name: pip
-        state: latest
+      ansible.builtin.pip:
+        name: bottle
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
