--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -19,8 +19,9 @@
     - name: "install python for Ansible."
       # Your code here
       become: yes
-      ansible.builtin.pip:
-        name: bottle
+      apt:
+        name: Python3
+        state: latest
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
