--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -19,9 +19,8 @@
     - name: "install python for Ansible."
       # Your code here
       become: yes
-      apt:
-        name: Python3
-        state: latest
+      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      changed_when: false
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
