--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -18,9 +18,10 @@
 
     - name: "install python for Ansible."
       # Your code here
-      become: yes
-      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-      changed_when: false
+      apt:
+        update_cache: yes
+        name:
+          - python-minimal
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
