--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -21,7 +21,7 @@
       apt:
         update_cache: yes
         name:
-          - python-minimal
+          - python3
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
