--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,7 +222,7 @@ jobs:
             npm install
             # npm audit fix --audit-level=critical
             # Run and save the migration output
-            npm run migrations > migrations_dump.txt
+            npm run migrations --force > migrations_dump.txt
       - run:
           name: Send migration results to KVdb.io
           command: |
