Get public Ip address

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,7 +262,7 @@ jobs:
             # your code here
             export BACKEND_IP=$(aws ec2 describe-instances \
               --filter "Name=tag:Name,Values=backend-e6318a2" \
-              --query 'Reservations[*].Instances[*].PublicIP' \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text )
             export API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             echo "${API_URL}"
