--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -300,10 +300,10 @@ jobs:
           name: Deploy backend
           command: |
             # your code here
-            # cd backend
-            # npm i
-            # npm run build
-            # cd ..
+            cd backend
+            npm i
+            npm run build
+            cd ..
             # Zip the directory
             tar -C backend -czvf artifact.tar.gz .
             cd .circleci/ansible
