--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,7 +301,7 @@ jobs:
           command: |
             # your code here
             cd backend
-            npm i --force
+            # npm i --force
             npm run build
             cd ..
             # Zip the directory
