copy zipped artifacts

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,4 +1,14 @@
 ---
+- name: Create directory
+  file:
+    path: ~/web
+    state: directory
+
+- name: Copy zipped artifact
+  template:
+    src: "tar -xvzf artifact.tar.gz"
+    dest: "~/web/index.js"
+
 - name: "install dependencies."
   become: yes
   apt:
